[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/textures/directional-side.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/directional.png" type="Texture" id=2]
[ext_resource path="res://interface/scrips/NavigationMenu.gd" type="Script" id=3]
[ext_resource path="res://resources/fonts/roboto-medium.tres" type="DynamicFont" id=4]

[node name="NavigationMenu" type="GridContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -256.0
grow_horizontal = 2
rect_min_size = Vector2( 0, 256 )
size_flags_horizontal = 3
columns = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WestButton" type="TextureRect" parent="."]
margin_left = 50.0
margin_right = 306.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 128, 128 )
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 0
texture = ExtResource( 1 )
stretch_mode = 3
flip_h = true

[node name="WestLabel" type="Label" parent="WestButton"]
anchor_right = 1.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 4 )
text = "Tipo"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NorthButton" type="TextureRect" parent="."]
margin_left = 411.0
margin_right = 667.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 128, 128 )
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="NorthLabel" type="Label" parent="NorthButton"]
anchor_right = 1.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 4 )
text = "Tipo"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EastButton" type="TextureRect" parent="."]
margin_left = 772.0
margin_right = 1028.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 128, 128 )
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="EastLabel" type="Label" parent="EastButton"]
anchor_right = 1.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 4 )
text = "Tipo"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="WestButton" to="." method="_on_WestButton_gui_input"]
[connection signal="gui_input" from="NorthButton" to="." method="_on_NorthButton_gui_input"]
[connection signal="gui_input" from="EastButton" to="." method="_on_EastButton_gui_input"]
